// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#61: client throws ApiError with status and typed data 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostItemsBody = {
  name: string;
};

/** Created */
export type PostItemsResponse = void;

export type PostItemsError400 = {
  error: string;
};

export type PostItemsErrors = ApiError<400, PostItemsError400>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#61: client throws ApiError with status and typed data 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostItemsBody, PostItemsError400, PostItemsErrors } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Created
     *
     * @param body — request body
     */
    postItems: decorateWithErrors<(body?: PostItemsBody) => Promise<void>, PostItemsErrors>(
      async (body?: PostItemsBody): Promise<void> => {
        try {
          const result = await requester<void>("POST", \`/items\`, { body });
          if (result instanceof ErrorResponse) {
            if (result.status === 400) throw new ApiError(400, result.data as PostItemsError400, result.message ?? \`Request failed with status 400\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [400] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#61: generates ApiError<TStatus, TData> class in contracts 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** OK */
export type GetItemsResponse = void;

export type GetItemsError400 = unknown;

export type GetItemsErrors = ApiError<400, GetItemsError400>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#61: generates ApiError<TStatus, TData> class in contracts 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetItemsError400, GetItemsErrors } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * OK
     */
    getItems: decorateWithErrors<() => Promise<void>, GetItemsErrors>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            if (result.status === 400) throw new ApiError(400, result.data as GetItemsError400, result.message ?? \`Request failed with status 400\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [400] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#62: client throws UnspecifiedApiError for unhandled status codes 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** OK */
export type GetItemsResponse = void;

export type GetItemsError400 = unknown;

export type GetItemsErrors = ApiError<400, GetItemsError400>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#62: client throws UnspecifiedApiError for unhandled status codes 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetItemsError400, GetItemsErrors } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * OK
     */
    getItems: decorateWithErrors<() => Promise<void>, GetItemsErrors>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            if (result.status === 400) throw new ApiError(400, result.data as GetItemsError400, result.message ?? \`Request failed with status 400\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [400] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#62: generates UnspecifiedApiError class in contracts 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** OK */
export type GetItemsResponse = void;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#62: generates UnspecifiedApiError class in contracts 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * OK
     */
    getItems: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#63: generates isDefinedError type guard in client 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** OK */
export type GetItemsResponse = void;

export type GetItemsError400 = unknown;

export type GetItemsErrors = ApiError<400, GetItemsError400>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#63: generates isDefinedError type guard in client 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetItemsError400, GetItemsErrors } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * OK
     */
    getItems: decorateWithErrors<() => Promise<void>, GetItemsErrors>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/items\`, {});
          if (result instanceof ErrorResponse) {
            if (result.status === 400) throw new ApiError(400, result.data as GetItemsError400, result.message ?? \`Request failed with status 400\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [400] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#64: generates per-operation error union type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Deleted */
export type DeleteUsersUserIdResponse = void;

export type DeleteUsersUserIdError400 = {
  msg: string;
};

export type DeleteUsersUserIdError404 = unknown;

export type DeleteUsersUserIdErrors = ApiError<400, DeleteUsersUserIdError400> | ApiError<404, DeleteUsersUserIdError404>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#64: generates per-operation error union type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { DeleteUsersUserIdError400, DeleteUsersUserIdError404, DeleteUsersUserIdErrors } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Deleted
     */
    deleteUsersByUserId: decorateWithErrors<(userId: string) => Promise<void>, DeleteUsersUserIdErrors>(
      async (userId: string): Promise<void> => {
        try {
          const result = await requester<void>("DELETE", \`/users/\${encodeURIComponent(userId)}\`, {});
          if (result instanceof ErrorResponse) {
            if (result.status === 400) throw new ApiError(400, result.data as DeleteUsersUserIdError400, result.message ?? \`Request failed with status 400\`);
            if (result.status === 404) throw new ApiError(404, result.data as DeleteUsersUserIdError404, result.message ?? \`Request failed with status 404\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [400, 404] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#64: operation with no error responses has no error types 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** OK */
export type GetHealthResponse = {
  status: string;
};"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#64: operation with no error responses has no error types 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetHealthResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * OK
     */
    getHealth: decorateWithErrors<() => Promise<GetHealthResponse>, never>(
      async (): Promise<GetHealthResponse> => {
        try {
          const result = await requester<GetHealthResponse>("GET", \`/health\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#65: contracts-generator does NOT emit DefaultErrorBody (only error-types.ts does) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostItemsBody = {
  name?: string;
};

/** Created */
export type PostItemsResponse = void;

export type PostItemsError400 = unknown;

export type PostItemsDefaultError = unknown;

export type PostItemsErrors = ApiError<400, PostItemsError400>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#65: contracts-generator does NOT emit DefaultErrorBody (only error-types.ts does) 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError, DefaultApiError } from './contracts.js';
import type { PostItemsBody, PostItemsDefaultError, PostItemsError400, PostItemsErrors } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Created
     *
     * @param body — request body
     */
    postItems: decorateWithErrors<(body?: PostItemsBody) => Promise<void>, PostItemsErrors>(
      async (body?: PostItemsBody): Promise<void> => {
        try {
          const result = await requester<void>("POST", \`/items\`, { body });
          if (result instanceof ErrorResponse) {
            if (result.status === 400) throw new ApiError(400, result.data as PostItemsError400, result.message ?? \`Request failed with status 400\`);
            throw new DefaultApiError(result.status, result.data as PostItemsDefaultError, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [400] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#66: generates separate typed error per status code 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostSubmitBody = {
  data: string;
};

/** Created */
export type PostSubmitResponse = {
  id: string;
};

export type PostSubmitError400 = {
  errors?: string[];
};

export type PostSubmitError401 = unknown;

export type PostSubmitError403 = unknown;

export type PostSubmitError429 = {
  retryAfter?: number;
};

export type PostSubmitErrors = ApiError<400, PostSubmitError400> | ApiError<401, PostSubmitError401> | ApiError<403, PostSubmitError403> | ApiError<429, PostSubmitError429>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#66: generates separate typed error per status code 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostSubmitBody, PostSubmitError400, PostSubmitError401, PostSubmitError403, PostSubmitError429, PostSubmitErrors, PostSubmitResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Created
     *
     * @param body — request body
     */
    postSubmit: decorateWithErrors<(body?: PostSubmitBody) => Promise<PostSubmitResponse>, PostSubmitErrors>(
      async (body?: PostSubmitBody): Promise<PostSubmitResponse> => {
        try {
          const result = await requester<PostSubmitResponse>("POST", \`/submit\`, { body });
          if (result instanceof ErrorResponse) {
            if (result.status === 400) throw new ApiError(400, result.data as PostSubmitError400, result.message ?? \`Request failed with status 400\`);
            if (result.status === 401) throw new ApiError(401, result.data as PostSubmitError401, result.message ?? \`Request failed with status 401\`);
            if (result.status === 403) throw new ApiError(403, result.data as PostSubmitError403, result.message ?? \`Request failed with status 403\`);
            if (result.status === 429) throw new ApiError(429, result.data as PostSubmitError429, result.message ?? \`Request failed with status 429\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [400, 401, 403, 429] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#67: error types use unknown when no schema provided 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Reset done */
export type PostResetResponse = void;

export type PostResetError500 = unknown;

export type PostResetErrors = ApiError<500, PostResetError500>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#67: error types use unknown when no schema provided 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostResetError500, PostResetErrors } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Reset done
     */
    postReset: decorateWithErrors<() => Promise<void>, PostResetErrors>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("POST", \`/reset\`, {});
          if (result instanceof ErrorResponse) {
            if (result.status === 500) throw new ApiError(500, result.data as PostResetError500, result.message ?? \`Request failed with status 500\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [500] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#67: maps each error response to a typed ApiError throw in client 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Order */
export type GetOrdersOrderIdResponse = {
  id: string;
};

export type GetOrdersOrderIdError400 = {
  msg: string;
};

export type GetOrdersOrderIdError404 = unknown;

export type GetOrdersOrderIdErrors = ApiError<400, GetOrdersOrderIdError400> | ApiError<404, GetOrdersOrderIdError404>;"
`;

exports[`OpenAPI 3.0 — Error Handling (3.0-#61-#67) > 3.0-#67: maps each error response to a typed ApiError throw in client 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetOrdersOrderIdError400, GetOrdersOrderIdError404, GetOrdersOrderIdErrors, GetOrdersOrderIdResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Order
     */
    getOrdersByOrderId: decorateWithErrors<(orderId: string) => Promise<GetOrdersOrderIdResponse>, GetOrdersOrderIdErrors>(
      async (orderId: string): Promise<GetOrdersOrderIdResponse> => {
        try {
          const result = await requester<GetOrdersOrderIdResponse>("GET", \`/orders/\${encodeURIComponent(orderId)}\`, {});
          if (result instanceof ErrorResponse) {
            if (result.status === 400) throw new ApiError(400, result.data as GetOrdersOrderIdError400, result.message ?? \`Request failed with status 400\`);
            if (result.status === 404) throw new ApiError(404, result.data as GetOrdersOrderIdError404, result.message ?? \`Request failed with status 404\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [400, 404] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Error handling edge cases > RequesterFailError is generated in contracts 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** OK */
export type GetPingResponse = void;"
`;

exports[`OpenAPI 3.0 — Error handling edge cases > RequesterFailError is generated in contracts 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * OK
     */
    getPing: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/ping\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Error handling edge cases > client wraps non-ApiError exceptions in RequesterFailError 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** OK */
export type GetPingResponse = void;

export type GetPingError500 = unknown;

export type GetPingErrors = ApiError<500, GetPingError500>;"
`;

exports[`OpenAPI 3.0 — Error handling edge cases > client wraps non-ApiError exceptions in RequesterFailError 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetPingError500, GetPingErrors } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * OK
     */
    getPing: decorateWithErrors<() => Promise<void>, GetPingErrors>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/ping\`, {});
          if (result instanceof ErrorResponse) {
            if (result.status === 500) throw new ApiError(500, result.data as GetPingError500, result.message ?? \`Request failed with status 500\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [500] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Error handling edge cases > operation with binary success and typed errors generates both 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Export file */
export type GetExportFormatResponse = StreamResponse;

export type GetExportFormatError400 = {
  error: string;
};

export type GetExportFormatError404 = unknown;

export type GetExportFormatErrors = ApiError<400, GetExportFormatError400> | ApiError<404, GetExportFormatError404>;"
`;

exports[`OpenAPI 3.0 — Error handling edge cases > operation with binary success and typed errors generates both 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetExportFormatError400, GetExportFormatError404, GetExportFormatErrors, GetExportFormatResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Export file
     */
    getExportByFormat: decorateWithErrors<(format: string) => Promise<GetExportFormatResponse>, GetExportFormatErrors>(
      async (format: string): Promise<GetExportFormatResponse> => {
        try {
          const result = await requester<GetExportFormatResponse>("GET", \`/export/\${encodeURIComponent(format)}\`, { expectStream: true });
          if (result instanceof ErrorResponse) {
            if (result.status === 400) throw new ApiError(400, result.data as GetExportFormatError400, result.message ?? \`Request failed with status 400\`);
            if (result.status === 404) throw new ApiError(404, result.data as GetExportFormatError404, result.message ?? \`Request failed with status 404\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (!(result instanceof StreamResponse)) {
            throw new RequesterFailError(new Error("Expected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [400, 404] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#53: generates typed response type for 2xx status codes 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Product = {
  id: string;
  name: string;
};

/** List of products */
export type GetProductsResponse = Product[];"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#53: generates typed response type for 2xx status codes 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetProductsResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * List of products
     */
    getProducts: decorateWithErrors<() => Promise<GetProductsResponse>, never>(
      async (): Promise<GetProductsResponse> => {
        try {
          const result = await requester<GetProductsResponse>("GET", \`/products\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#53: unions multiple 2xx schemas into response type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Task = {
  id: string;
};

export type PostTasksBody = {
  cmd: string;
};

/** Created */
export type PostTasksResponse = Task | Task;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#53: unions multiple 2xx schemas into response type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostTasksBody, PostTasksResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Created
     *
     * @param body — request body
     */
    postTasks: decorateWithErrors<(body?: PostTasksBody) => Promise<PostTasksResponse>, never>(
      async (body?: PostTasksBody): Promise<PostTasksResponse> => {
        try {
          const result = await requester<PostTasksResponse>("POST", \`/tasks\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#54: generates error union for multiple error status codes 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** OK */
export type GetOrdersOrderIdResponse = {
  total: number;
};

export type GetOrdersOrderIdError400 = {
  msg: string;
};

export type GetOrdersOrderIdError404 = unknown;

export type GetOrdersOrderIdError500 = unknown;

export type GetOrdersOrderIdErrors = ApiError<400, GetOrdersOrderIdError400> | ApiError<404, GetOrdersOrderIdError404> | ApiError<500, GetOrdersOrderIdError500>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#54: generates error union for multiple error status codes 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetOrdersOrderIdError400, GetOrdersOrderIdError404, GetOrdersOrderIdError500, GetOrdersOrderIdErrors, GetOrdersOrderIdResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * OK
     */
    getOrdersByOrderId: decorateWithErrors<(orderId: string) => Promise<GetOrdersOrderIdResponse>, GetOrdersOrderIdErrors>(
      async (orderId: string): Promise<GetOrdersOrderIdResponse> => {
        try {
          const result = await requester<GetOrdersOrderIdResponse>("GET", \`/orders/\${encodeURIComponent(orderId)}\`, {});
          if (result instanceof ErrorResponse) {
            if (result.status === 400) throw new ApiError(400, result.data as GetOrdersOrderIdError400, result.message ?? \`Request failed with status 400\`);
            if (result.status === 404) throw new ApiError(404, result.data as GetOrdersOrderIdError404, result.message ?? \`Request failed with status 404\`);
            if (result.status === 500) throw new ApiError(500, result.data as GetOrdersOrderIdError500, result.message ?? \`Request failed with status 500\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [400, 404, 500] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#54: generates typed error types for 4xx status codes 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ValidationError = {
  field: string;
  message: string;
};

export type PostItemsBody = {
  name: string;
};

/** Created */
export type PostItemsResponse = {
  id: string;
};

export type PostItemsError400 = ValidationError;

export type PostItemsErrors = ApiError<400, PostItemsError400>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#54: generates typed error types for 4xx status codes 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostItemsBody, PostItemsError400, PostItemsErrors, PostItemsResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Created
     *
     * @param body — request body
     */
    postItems: decorateWithErrors<(body?: PostItemsBody) => Promise<PostItemsResponse>, PostItemsErrors>(
      async (body?: PostItemsBody): Promise<PostItemsResponse> => {
        try {
          const result = await requester<PostItemsResponse>("POST", \`/items\`, { body });
          if (result instanceof ErrorResponse) {
            if (result.status === 400) throw new ApiError(400, result.data as PostItemsError400, result.message ?? \`Request failed with status 400\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [400] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#54: generates typed error types for 5xx status codes 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** OK */
export type GetHealthResponse = {
  status: string;
};

export type GetHealthError500 = {
  error: string;
};

export type GetHealthErrors = ApiError<500, GetHealthError500>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#54: generates typed error types for 5xx status codes 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetHealthError500, GetHealthErrors, GetHealthResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * OK
     */
    getHealth: decorateWithErrors<() => Promise<GetHealthResponse>, GetHealthErrors>(
      async (): Promise<GetHealthResponse> => {
        try {
          const result = await requester<GetHealthResponse>("GET", \`/health\`, {});
          if (result instanceof ErrorResponse) {
            if (result.status === 500) throw new ApiError(500, result.data as GetHealthError500, result.message ?? \`Request failed with status 500\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [500] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#55: default alongside explicit error codes keeps explicit errors only 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Tasks */
export type GetTasksResponse = void;

export type GetTasksError401 = unknown;

export type GetTasksDefaultError = unknown;

export type GetTasksErrors = ApiError<401, GetTasksError401>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#55: default alongside explicit error codes keeps explicit errors only 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError, DefaultApiError } from './contracts.js';
import type { GetTasksDefaultError, GetTasksError401, GetTasksErrors } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Tasks
     */
    getTasks: decorateWithErrors<() => Promise<void>, GetTasksErrors>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/tasks\`, {});
          if (result instanceof ErrorResponse) {
            if (result.status === 401) throw new ApiError(401, result.data as GetTasksError401, result.message ?? \`Request failed with status 401\`);
            throw new DefaultApiError(result.status, result.data as GetTasksDefaultError, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [401] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#55: default response is excluded from typed error codes 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Pong */
export type GetPingResponse = void;

export type GetPingDefaultError = unknown;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#55: default response is excluded from typed error codes 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError, DefaultApiError } from './contracts.js';
import type { GetPingDefaultError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Pong
     */
    getPing: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/ping\`, {});
          if (result instanceof ErrorResponse) {
            throw new DefaultApiError(result.status, result.data as GetPingDefaultError, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#56: binary response produces StreamResponse type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** File download */
export type GetDownloadFileIdResponse = StreamResponse;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#56: binary response produces StreamResponse type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetDownloadFileIdResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * File download
     */
    getDownloadByFileId: decorateWithErrors<(fileId: string) => Promise<GetDownloadFileIdResponse>, never>(
      async (fileId: string): Promise<GetDownloadFileIdResponse> => {
        try {
          const result = await requester<GetDownloadFileIdResponse>("GET", \`/download/\${encodeURIComponent(fileId)}\`, { expectStream: true });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (!(result instanceof StreamResponse)) {
            throw new RequesterFailError(new Error("Expected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#56: image content type produces StreamResponse type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** User avatar */
export type GetAvatarUserIdResponse = StreamResponse;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#56: image content type produces StreamResponse type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetAvatarUserIdResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * User avatar
     */
    getAvatarByUserId: decorateWithErrors<(userId: string) => Promise<GetAvatarUserIdResponse>, never>(
      async (userId: string): Promise<GetAvatarUserIdResponse> => {
        try {
          const result = await requester<GetAvatarUserIdResponse>("GET", \`/avatar/\${encodeURIComponent(userId)}\`, { expectStream: true });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (!(result instanceof StreamResponse)) {
            throw new RequesterFailError(new Error("Expected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#57: empty 200 response with no content produces void type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Pong */
export type GetPingResponse = void;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#57: empty 200 response with no content produces void type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Pong
     */
    getPing: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/ping\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#57: empty 204 response produces void type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Cache cleared */
export type DeleteCacheResponse = void;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#57: empty 204 response produces void type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Cache cleared
     */
    deleteCache: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("DELETE", \`/cache\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#58: uses first content type schema for response 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Data */
export type GetDataResponse = {
  jsonField: string;
};"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#58: uses first content type schema for response 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetDataResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Data
     */
    getData: decorateWithErrors<() => Promise<GetDataResponse>, never>(
      async (): Promise<GetDataResponse> => {
        try {
          const result = await requester<GetDataResponse>("GET", \`/data\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#59: response headers are not emitted as typed output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Stream */
export type GetStreamResponse = string;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#59: response headers are not emitted as typed output 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetStreamResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Stream
     */
    getStream: decorateWithErrors<() => Promise<GetStreamResponse>, never>(
      async (): Promise<GetStreamResponse> => {
        try {
          const result = await requester<GetStreamResponse>("GET", \`/stream\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#59: response headers do not prevent response type generation 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** File info */
export type GetDownloadResponse = {
  url: string;
};"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#59: response headers do not prevent response type generation 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetDownloadResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * File info
     */
    getDownload: decorateWithErrors<() => Promise<GetDownloadResponse>, never>(
      async (): Promise<GetDownloadResponse> => {
        try {
          const result = await requester<GetDownloadResponse>("GET", \`/download\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#60: response examples (3.0 \`example\` keyword) are parsed but not emitted 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Status */
export type GetStatusResponse = {
  healthy: boolean;
};"
`;

exports[`OpenAPI 3.0 — Responses (3.0-#53-#60) > 3.0-#60: response examples (3.0 \`example\` keyword) are parsed but not emitted 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetStatusResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Status
     */
    getStatus: decorateWithErrors<() => Promise<GetStatusResponse>, never>(
      async (): Promise<GetStatusResponse> => {
        try {
          const result = await requester<GetStatusResponse>("GET", \`/status\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;
